--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-success navbar-dark">
@@ -18,7 +18,7 @@
         <div class="d-flex w-100 justify-content-between align-items-center">
           <a class="navbar-brand" href="#">
             <img
-              src="/assets/img/logo-white.png"
+              src="assets/img/logo-white.png"
               alt="Logo Cuppon blanco"
               class="w-25"
             />
@@ -52,7 +52,7 @@
       <div class="col">
         <div class="card h-100">
           <img
-            src="/assets/img/cupon-1.jpg"
+            src="assets/img/cupon-1.jpg"
             class="card-img-top"
             alt="Plumón color blanco"
           />
@@ -75,7 +75,7 @@
       <div class="col">
         <div class="card h-100">
           <img
-            src="/assets/img/cupon-2.jpg"
+            src="assets/img/cupon-2.jpg"
             class="card-img-top"
             alt="Plumón color blanco"
           />
@@ -97,7 +97,7 @@
       <div class="col">
         <div class="card h-100">
           <img
-            src="/assets/img/cupon-3.jpg"
+            src="assets/img/cupon-3.jpg"
             class="card-img-top"
             alt="Plumón color blanco"
           />
@@ -121,7 +121,7 @@
       <div class="col">
         <div class="card h-100">
           <img
-            src="/assets/img/cupon-4.jpg"
+            src="assets/img/cupon-4.jpg"
             class="card-img-top"
             alt="Plumón color blanco"
           />
@@ -143,7 +143,7 @@
       <div class="col">
         <div class="card h-100">
           <img
-            src="/assets/img/cupon-5.jpg"
+            src="assets/img/cupon-5.jpg"
             class="card-img-top"
             alt="Plumón color blanco"
           />
@@ -165,7 +165,7 @@
       <div class="col">
         <div class="card h-100">
           <img
-            src="/assets/img/cupon-6.jpg"
+            src="assets/img/cupon-6.jpg"
             class="card-img-top"
             alt="Plumón color blanco"
           />
@@ -207,7 +207,7 @@
 
     <div class="text-center mt-3">
       <img
-        src="/assets/img/logo-black.png"
+        src="assets/img/logo-black.png"
         alt="Logo Cuppon negro"
         style="height: 24px"
       />
