Corregir atributos alt repetidos en imágenes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <img
             src="assets/img/cupon-2.jpg"
             class="card-img-top"
-            alt="Plumón color blanco"
+            alt="Plato de ensalada con ingredientes frescos"
           />
           <div class="card-body">
             <h5 class="card-title">
@@ -99,7 +99,7 @@
           <img
             src="assets/img/cupon-3.jpg"
             class="card-img-top"
-            alt="Plumón color blanco"
+            alt="Estación de limpieza dental con equipo moderno y profesional"
           />
           <div class="card-body">
             <h5 class="card-title">
@@ -123,7 +123,7 @@
           <img
             src="assets/img/cupon-4.jpg"
             class="card-img-top"
-            alt="Plumón color blanco"
+            alt="Charquicán con carne y verduras"
           />
           <div class="card-body">
             <h5 class="card-title">
@@ -145,7 +145,7 @@
           <img
             src="assets/img/cupon-5.jpg"
             class="card-img-top"
-            alt="Plumón color blanco"
+            alt="Parque de diversiones con atracciones y juegos mecánicos"
           />
           <div class="card-body">
             <h5 class="card-title">
@@ -167,7 +167,7 @@
           <img
             src="assets/img/cupon-6.jpg"
             class="card-img-top"
-            alt="Plumón color blanco"
+            alt="Paisaje de un lago con montañas al fondo, un cielo despejado y un flamenco bebiendo agua"
           />
           <div class="card-body">
             <h5 class="card-title">
